# todoist-notification-to-slack

./: .travis.yml  Cargo.toml  README.md
src/: envs.rs  main.rs  slack.rs  tasks.rs  todoist.rs  types.rs
